Solved scrollbar issue

--- a/styles/portfolio-style.sass
+++ b/styles/portfolio-style.sass
@@ -1,7 +1,7 @@
 body
   margin: 0
   padding: 0
-
+  overflow-x: hidden
 
 
 html
@@ -16,6 +16,8 @@ p
   display: inline-block
 
 .generalContainer
+  overflow: hidden
+
   position: absolute
   width: 100vw
   height: 5550px
